[feature]添加了nacos相关

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
 
     <modules>
         <module>cloud-provider-payment-8001</module>
+        <module>cloudalibaba-provider-payment9001</module>
         <module>cloud-provider-calender-5001</module>
+        <module>cloudalibaba-provider-payment9002</module>
     </modules>
     <!--  统一管理jar包版本-->
     <properties>
