--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>cloud-provider-calender-5001</module>
         <module>cloudalibaba-provider-payment9002</module>
         <module>coudalibaba-consumer-nacos-order83</module>
+        <module>cloudalibaba-config-nacos-client3377</module>
     </modules>
     <!--  统一管理jar包版本-->
     <properties>
