--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cloudalibaba-provider-payment9002</module>
         <module>coudalibaba-consumer-nacos-order83</module>
         <module>cloudalibaba-config-nacos-client3377</module>
+        <module>cloudalibaba-sentinel-service8401</module>
     </modules>
     <!--  统一管理jar包版本-->
     <properties>
